# swagger.json
@@ -74,9 +74,6 @@
                 },
                 "password": {
                   "example": "any"
-                },
-                "role": {
-                  "example": "any"
                 }
               }
             }
@@ -88,6 +85,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "409": {
+            "description": "Conflict"
           },
           "500": {
             "description": "Internal Server Error"
@@ -146,9 +146,32 @@
     },
     "/auth/google/callback": {
       "get": {
-        "tags": [
-          "Auth"
-        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/auth/github": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/github/callback": {
+      "get": {
         "description": "",
         "responses": {
           "200": {
@@ -165,6 +188,9 @@
     },
     "/auth/logout": {
       "get": {
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -175,9 +201,6 @@
     },
     "/auth/google/failure": {
       "get": {
-        "tags": [
-          "Auth"
-        ],
         "description": "",
         "responses": {
           "401": {
@@ -1076,15 +1099,6 @@
             "description": "Product not found"
           }
         }
-      }
-    }
-  },
-  "components": {
-    "securitySchemes": {
-      "bearerAuth": {
-        "type": "http",
-        "scheme": "bearer",
-        "bearerFormat": "JWT"
       }
     }
   }
